# lurk-web-component

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  index.html  package-lock.json  package.json  start-http-server.sh  webpack.config.js
css/: lurk.css
docs/: dark.html  github.html  hellfire.html  index.html  vestigial.html  wookie.html
docs/css/: lurk.css
docs/js/: index.js
docs/js/pkg/: README.md  lurk_web.d.ts  lurk_web.js  lurk_web_bg.wasm  package.json
docs/pkg/: lurk_web.d.ts  lurk_web.js  lurk_web_bg.js  lurk_web_bg.wasm  lurk_web_bg.wasm.d.ts
js/: index.js  wasm-worker.js
src/: lib.rs
static/: index.html
static/css/: lurk.css
