# You must change these to your own details.
[package]
name = "lurk-web-component"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["Jay Logelin <jay.logelin@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]
# crate-type = ["cdylib", "rlib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
# lto = true
panic = "unwind"

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = ["wasm-bindgen-rayon"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2.82" }
lurk = { git = "https://github.com/lurk-lang/lurk-rs", branch = "rebased-wasm-support", default-features = false, features = ["wasm"] }
anyhow = "1.0.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
blstrs = { version = "0.4.2", default-features = false }
wasm-bindgen-rayon = { version = "1.0", optional = true }
parking_lot = { version = "0.12", features = ["nightly"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
]

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
#[dependencies.web-sys]
#version = "0.3.22"
#features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"

[net]
git-fetch-with-cli = true
